--- a/front/package.json
+++ b/front/package.json
@@ -21,7 +21,8 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^6.0.0",
-    "sass-loader": "^12.0.0",
+    "sass": "^1.34.1",
+    "sass-loader": "7.3.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
