--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "db": "^3.3.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsdom": "^16.6.0",
     "mysql": "^2.18.1",
