--- a/front/package.json
+++ b/front/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
-    "vue-awesome": "^4.3.1",
     "vue-axios": "^3.2.4",
     "vue-router": "^4.0.0-0",
     "vue3-cookies": "^1.0.1",
