--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/index.js",
-    "compile": "cd ../front && npm run build && cd ../server && nodemon server/index.js"
+    "start": "nodemon server/index.js"
   },
   "author": "",
   "license": "ISC",
